--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@mux/mux-node": "^8.2.3",
     "@mux/mux-player-react": "^2.4.0",
     "@prisma/client": "^5.11.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.15.3",
     "@uploadthing/react": "^6.4.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -30,16 +33,20 @@
     "hls.js": "^1.5.7",
     "lucide-react": "^0.359.0",
     "next": "14.1.4",
+    "query-string": "^9.0.0",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "shaka-player": "^4.7.11",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.6.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
