--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.15.3",
     "@uploadthing/react": "^6.4.0",
@@ -30,6 +31,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "highlight.js": "^11.9.0",
+    "highlightjs": "^9.16.2",
     "hls.js": "^1.5.7",
     "lucide-react": "^0.359.0",
     "next": "14.1.4",
