--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mux/mux-node": "^8.2.3",
     "@mux/mux-player-react": "^2.4.0",
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^5.13.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -45,6 +45,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
+    "recharts": "^2.12.7",
     "shaka-player": "^4.7.11",
     "stripe": "^15.6.0",
     "tailwind-merge": "^2.2.2",
@@ -59,7 +60,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "prisma": "^5.9.1",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
