--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "embla-carousel-react": "^8.0.4",
     "highlight.js": "^11.9.0",
     "highlightjs": "^9.16.2",
     "hls.js": "^1.5.7",
