--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.9",
+    "@calumk/editorjs-columns": "^0.3.2",
+    "@clerk/nextjs": "^5.3.7",
+    "@editorjs/checklist": "^1.6.0",
+    "@editorjs/delimiter": "^1.4.2",
+    "@editorjs/editorjs": "^2.30.5",
+    "@editorjs/header": "^2.8.7",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/list": "^1.10.0",
+    "@editorjs/paragraph": "^2.11.6",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.3.4",
     "@mux/mux-node": "^8.2.3",
     "@mux/mux-player-react": "^2.4.0",
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.19.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -28,10 +36,16 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.15.3",
     "@uploadthing/react": "^6.4.0",
+    "ace-builds": "^1.36.0",
+    "ace-code-editorjs": "^1.0.3",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "editorjs-alert": "^1.1.4",
+    "editorjs-button": "^3.0.3",
+    "editorjs-header-with-alignment": "^1.0.1",
+    "editorjs-header-with-anchor": "^2.6.0",
     "embla-carousel-react": "^8.0.4",
     "highlight.js": "^11.9.0",
     "highlightjs": "^9.16.2",
@@ -45,23 +59,25 @@
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-quill": "^2.0.0",
     "recharts": "^2.12.7",
     "shaka-player": "^4.7.11",
     "stripe": "^15.6.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "title-editorjs": "^1.0.2",
     "uploadthing": "^6.6.0",
     "zod": "^3.22.4",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "editorjs-table": "^1.4.10",
+    "editorjs-toggle-block": "^0.3.16",
     "postcss": "^8",
-    "prisma": "^5.13.0",
+    "prisma": "^5.19.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
