update editor and DB schema

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
+  "prisma": {
+    "seed": "./scripts/seed.ts"
+  },
   "dependencies": {
     "@calumk/editorjs-columns": "^0.3.2",
     "@clerk/nextjs": "^5.3.7",
@@ -36,10 +39,28 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.15.3",
     "@uploadthing/react": "^6.4.0",
+    "@yoopta/accordion": "^4.7.0",
+    "@yoopta/action-menu-list": "^4.7.0",
+    "@yoopta/blockquote": "^4.7.0",
+    "@yoopta/callout": "^4.7.0",
+    "@yoopta/code": "^4.7.0",
+    "@yoopta/editor": "^4.7.0",
+    "@yoopta/embed": "^4.7.0",
+    "@yoopta/file": "^4.7.0",
+    "@yoopta/headings": "^4.7.0",
+    "@yoopta/image": "^4.7.0",
+    "@yoopta/link": "^4.7.0",
+    "@yoopta/link-tool": "^4.7.0",
+    "@yoopta/lists": "^4.7.0",
+    "@yoopta/marks": "^4.7.0",
+    "@yoopta/paragraph": "^4.7.0",
+    "@yoopta/toolbar": "^4.7.0",
+    "@yoopta/video": "^4.7.0",
     "ace-builds": "^1.36.0",
     "ace-code-editorjs": "^1.0.3",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.4.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "editorjs-alert": "^1.1.4",
@@ -61,6 +82,8 @@
     "react-icons": "^5.0.1",
     "recharts": "^2.12.7",
     "shaka-player": "^4.7.11",
+    "slate": "^0.103.0",
+    "slate-react": "^0.109.0",
     "stripe": "^15.6.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
